--- a/scss/components/_contact-list.scss
+++ b/scss/components/_contact-list.scss
@@ -65,43 +65,6 @@
     }
 }
 
-@keyframes slide {
-    0% {
-        opacity: .1;
-        transform: translateX(100%);
-        background-color: #ccc;
-    }
-
-    5% {
-        transform: translateX(90%) skewX(-15deg);
-    }
-
-    35% {
-        opacity: 1;
-        transform: translateX(-10%) skewX(15deg);
-    }
-
-    60% {
-        transform: translateX(8%) skewX(-12deg);
-    }
-
-    70% {
-        transform: translateX(-6%) skewX(8deg);
-    }
-
-    80% {
-        transform: translateX(3%) skewX(-4deg);
-    }
-
-    95% {
-        transform: translateX(-1%) skewX(2deg);
-    }
-
-    100% {
-        transform: translateX(0%);
-    }
-}
-
 .fadeIn-enter {
     transform: translateX(100%);
 }
