--- a/scss/components/_noti-bar.scss
+++ b/scss/components/_noti-bar.scss
@@ -1,12 +1,3 @@
-@keyframes showhide {
-    0%, 100% {
-        transform: translate(0,-100%);
-    }
-    10%, 90% {
-        transform: translate(0,0);
-    }
-}
-
 .noti-bar {
     position: fixed;
     top: 0;
